# hybrid-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
benchmark_results/: create_figures.py  process_results.py  test_hr_t000  test_hr_t025  test_hr_t050  test_hr_t075  test_hr_t100  test_pt_t000  test_pt_t025  test_pt_t050  test_pt_t075  test_pt_t100
benchmark_results/dataset/: HybridRendering_t000.csv  HybridRendering_t025.csv  HybridRendering_t050.csv  HybridRendering_t075.csv  HybridRendering_t100.csv  PathTracing_t000.csv  PathTracing_t025.csv  PathTracing_t050.csv  PathTracing_t075.csv  PathTracing_t100.csv
demo/: CMakeLists.txt
demo/assets/: armadillo_lod.mtl  basic_scene.json  default_scene.json  interior_scene.json  plane_lod.mtl  simple_objects_lod.mtl  susanne_lod.mtl  test_scene.glb  test_scene.mtl
demo/include/: demo.h  material.h  passes.h  platform.h  render_passes.h  renderer.h  scene.h  subsystems.h  timer.h  ui_manager.h  window_manager.h
demo/include/detail/: dispatch.h  raytracing.h
demo/shaders/: compose.frag  deferred_shading.frag  fullscreen_quad.vert  gbuffer_layout.frag  gbuffer_sample.frag  hybrid.rchit  hybrid.rgen  hybrid.rmiss  present.frag  rand.glsl  raytracing_common.glsl  rng_gen.comp  shader_common.glsl  soft_shadow.rchit  soft_shadow.rmiss  static.vert  temporal_reproject.comp
demo/shaders/direct_illumination/: di.rchit  di.rgen  di.rmiss  di_hybrid.rchit  di_hybrid.rgen  di_hybrid.rmiss
demo/shaders/global_illumination/: gi.rchit  gi.rmiss  gi_hybrid.rgen
demo/shaders/path_tracing/: pt.rchit  pt.rgen  pt.rmiss
demo/shaders/soft_shadow/: ss_hybrid.rgen  ss_hybrid.rmiss
demo/src/: main.cpp  render_passes.cpp  renderer.cpp  scene.cpp  subsystems.cpp  ui_manager.cpp  window_manager.cpp
demo/src/detail/: raytracing.cpp
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  buffer_8cpp.html  buffer_8cpp__incl.map  buffer_8cpp__incl.md5  buffer_8cpp_source.html  buffer_8h.html  buffer_8h.js  buffer_8h__dep__incl.map  buffer_8h__dep__incl.md5  buffer_8h__incl.map  buffer_8h__incl.md5  buffer_8h_source.html  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8cpp_source.html  camera_8h.html  camera_8h.js  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  class_g_buffer_layout_subsystem-members.html  class_g_buffer_layout_subsystem.html  class_g_buffer_layout_subsystem.js  class_g_buffer_layout_subsystem__coll__graph.map  class_g_buffer_layout_subsystem__coll__graph.md5  class_g_buffer_layout_subsystem__inherit__graph.map  class_g_buffer_layout_subsystem__inherit__graph.md5  class_g_buffer_layout_subsystem_a2256ebe444cbae68b140e734107f0edc_cgraph.map  class_g_buffer_layout_subsystem_a2256ebe444cbae68b140e734107f0edc_cgraph.md5  class_g_buffer_layout_subsystem_a26867401ba6679f838b890edbb4ebceb_cgraph.map  class_g_buffer_layout_subsystem_a26867401ba6679f838b890edbb4ebceb_cgraph.md5  (+1357 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_1.js  defines_2.js  (+83 more)
hybrid-renderer-lib/: .gitignore  CMakeLists.txt  config.h.in
hybrid-renderer-lib/include/: camera.h  hri_math.h  hybrid_renderer.h  material.h  mesh.h  platform.h  scene.h  texture.h
hybrid-renderer-lib/include/renderer_internal/: buffer.h  camera.h  command_submission.h  debug.h  descriptor_management.h  frame_graph.h  hri_math.h  image.h  material.h  mesh.h  render_context.h  render_core.h  render_pass.h  render_system.h  sampler.h  scene.h  shader_database.h  texture.h
hybrid-renderer-lib/shaders/: fs_quad.vert  present.frag
hybrid-renderer-lib/src/: camera.cpp  hri_math.cpp  hybrid_renderer.cpp  mesh.cpp  scene.cpp  texture.cpp
hybrid-renderer-lib/src/renderer_internal/: buffer.cpp  camera.cpp  command_submission.cpp  debug.cpp  descriptor_management.cpp  frame_graph.cpp  image.cpp  mesh.cpp  render_context.cpp  render_core.cpp  render_pass.cpp  render_system.cpp  sampler.cpp  scene.cpp  shader_database.cpp  texture.cpp  vma_usage.cpp
